src/app/results/results.component.css
.strands,
.loading,
.error {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}
.strands * {
  text-align: center;
}
h1,
p {
  margin: 0;
}
.titles,
.info {
  font-size: 15px;
  font-weight: 200;
}
.emojis {
  font-size: 30px;
  line-height: 35px;
  letter-spacing: 5px;
  text-align: initial;
}
.next-info {
  text-transform: uppercase;
  font-size: 18px;
}
.timer {
  font-size: 38px;
  margin-top: -25px;
  font-weight: 400;
  font-family: "Oxygen Mono", monospace;
}
button {
  display: block;
  height: 60px;
  width: 220px;
  border-radius: 10px;
  background: var(--guess-dark);
  border: none;
  color: white;
  font-size: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2px;
}
.back-button {
  height: 40px;
  font-size: 18px;
  background: var(--background-dark);
  border: 2px solid var(--guess-dark);
  color: var(--guess-dark);
}
.current-button {
  background: var(--solution-dark);
}

